--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -7,11 +7,80 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Registrar una nueva cuenta</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="ion-padding">
 
+    <ion-item>
+      <ion-label position="floating" required>Nombre<ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input name="name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating" required>Email<ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input name="email" type="email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating" required>Teléfono<ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input name="phone"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label type="password" position="floating" required>Contraseña<ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input name="password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label type="password" position="floating" required>Repetir contraseña<ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input name="password_confirm"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col>
+            <ion-label>Dirección</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-input placeholder="Dirección" name="address"></ion-input>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-input placeholder="Localidad" name="location"></ion-input>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-input placeholder="Provincia" name="province"></ion-input>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-input placeholder="Comunidad autónoma" name="state"></ion-input>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-input placeholder="País" name="country"></ion-input>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-input placeholder="Código Postal" type="number" name="cp"></ion-input>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+
+    <div class="ion-padding">
+      <ion-button expand="block" type="submit" class="ion-no-margin">Crear cuenta</ion-button>
+    </div>
+
+  </div>
 </ion-content>
