feat(auth): Added basic auth functionality
* Pending service guards for routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
           </ng-container>
 
           <ion-menu-toggle auto-hide="false" *ngIf="core.isLoggedIn">
-            <ion-item (click)="core.isLoggedIn=false" routerLink="/login?a=logout" routerDirection="root" lines="none" detail="false">
+            <ion-item (click)="core.auth.logout()" [routerLink]="['login']" [queryParams]="{msg: 'logout'}" routerDirection="root" lines="none" detail="false">
               <ion-icon slot="start" ios="log-out-outline'" md="log-out-sharp"></ion-icon>
               <ion-label>Cerrar sesión</ion-label>
             </ion-item>
