--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -7,11 +7,12 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Resumen</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-list *ngIf="data">
+    <ion-item *ngFor="let community of data.data" [routerLink]="'/community/'+community.alias+'/detail/pieces'">
+      <ion-label>{{community.name}}</ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
