feat(detail): Added tabs and functionality

--- a/src/app/pages/community-module/pages/list/list.page.html
+++ b/src/app/pages/community-module/pages/list/list.page.html
@@ -14,4 +14,9 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-list *ngIf="data">
+    <ion-item *ngFor="let community of data.data" (click)="detail(community)">
+      <ion-label>{{community.name}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
