--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,11 +7,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Iniciar sesión</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+	<div class="logo">
+		<img src="/assets/img/loginIcon.png">
+	</div>
+
+  <form #registerForm="ngForm"  class="ion-padding" (submit)="login()">
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input [autocomplete]="'nope'" [(ngModel)]="data.email" [required]="true" name="email" type="email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label type="password" position="floating">Contraseña</ion-label>
+      <ion-input (keydown.enter)="login()" [autocomplete]="'nope'" [(ngModel)]="data.password" [required]="true" type="password" name="password"></ion-input>
+    </ion-item>
+
+    <div class="ion-padding">
+      <ion-text>Si has olvidado tu contraseña, ponte en contacto mediante telegram con @arsa_dev</ion-text><br>
+      <ion-button expand="block" type="submit" class="ion-no-margin">Iniciar sesión</ion-button>
+    </div>
+  </form>
 
 </ion-content>
