--- a/src/app/pages/community-module/pages/detail/tabs/pieces/pieces.html
+++ b/src/app/pages/community-module/pages/detail/tabs/pieces/pieces.html
@@ -1,5 +1,23 @@
 <ion-content class="ion-padding">
-  <ion-row>
 
-  </ion-row>
+  <ng-container *ngIf="data">
+    <ion-card *ngFor="let piece of data.data" style="display: flex;">
+      <img [src]="piece.image||'/assets/icon/favicon.png'" style="max-width: 100px; max-height: 100px; padding: 10px;">
+      <ion-card-header>
+        <ion-card-title>{{piece.name}}</ion-card-title>
+        <ion-card-subtitle>
+          Comunidad -> Fabricadas: {{piece.units_manufactured}} | Recibidas: {{piece.units_collected}} | Stock: {{piece.units_stock}}
+        </ion-card-subtitle>
+        <ion-card-subtitle>
+          Tú -> Fabricadas: {{piece.units_manufactured}} | Recibidas: {{piece.units_collected}} | Stock: {{piece.units_stock}}
+        </ion-card-subtitle>
+      </ion-card-header>
+
+      <!-- <ion-card-content *ngIf="data.description">
+        {{data.description}}
+      </ion-card-content> -->
+    </ion-card>
+  </ng-container>
+
+  <!-- TODO: Pending pagination -->
 </ion-content>
