--- a/src/app/pages/community-module/pages/detail/tabs/ranking/ranking.html
+++ b/src/app/pages/community-module/pages/detail/tabs/ranking/ranking.html
@@ -1,5 +1,28 @@
-<ion-content class="ion-padding">
-  <ion-row>
+<ion-content>
 
-  </ion-row>
+  <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
+  <ion-list *ngIf="data" style="text-align: center;">
+    <ion-item *ngFor="let user of data.data; let i=index;">
+      <ion-avatar slot="start" style="font-size: 2em;">
+        {{i+1}}
+      </ion-avatar>
+      <ion-label>
+        <h2>{{user.user_name}}   <small>{{user.user_alias}}</small></h2>
+        <p>Total fabricadas: {{user.units_manufactured}}</p>
+      </ion-label>
+    </ion-item>
+    <ion-button (click)="loadMore()" fill="outline" style="margin-top: 15px;" *ngIf="data.data.lenght<data.per_page*data.last_page">
+      {{loadingMore?'Cargando...':'Cargar más'}}
+    </ion-button>
+  </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="adminPermission">
+    <ion-fab-button (click)="csvExport()">
+      <ion-icon name="save-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <a class="download-zip-link" #downloadLink style="display: none;"></a>
 </ion-content>
