feat(environments): Changed domain to .es 🎉

--- a/src/app/pages/404/404.page.scss
+++ b/src/app/pages/404/404.page.scss
@@ -31,6 +31,10 @@ ion-content {
   overflow: default;
 }
 
+ion-content {
+  --background: black;
+}
+
 ion-content:after {
   content: 'error 404';
   font-family: OCR-A;
