feat(app): Added some functionality
* Improved error handler
* Added stock funtionality
* Added pieces funtionality and stats
* Improved permissions
* Added some todo's for soon future ;)

--- a/src/app/pages/community-module/pages/detail/tabs/info/info.html
+++ b/src/app/pages/community-module/pages/detail/tabs/info/info.html
@@ -10,6 +10,7 @@
   </ion-fab>
 
   <ion-card *ngIf="data">
+    <img [src]="data.picture" style="width: 100%;">
     <ion-card-header *ngIf="!editMode">
       <ion-card-title>{{data.name}}</ion-card-title>
       <ion-card-subtitle>{{data.alias}}</ion-card-subtitle>
