--- a/src/app/pages/community-module/pages/detail/tabs/ranking/ranking.html
+++ b/src/app/pages/community-module/pages/detail/tabs/ranking/ranking.html
@@ -10,16 +10,23 @@
         {{i+1}}
       </ion-avatar>
       <ion-label>
-        <h2>{{user.user_name}}   <small>{{user.user_alias}}</small></h2>
-        <p>Total fabricadas: {{user.units_manufactured}}</p>
+        <h2>{{user.user_name}}   <small>{{user.user_alias}}</small> - MK#{{user.mak3r_num}}</h2>
+        <p>
+          Total fabricadas: {{user.units_manufactured}}
+          <ng-container *ngIf="adminPermission">| Total recogidas: {{user.units_collected}} | Stock: {{user.stock}}</ng-container>
+        </p>
+        <p *ngIf="adminPermission && showAddresses">
+          {{user.user_address}} - {{user.user_location}} ({{user.user_cp}}) <br>
+          {{user.user_province}} - {{user.user_state}} - {{user.user_country}}
+        </p>
       </ion-label>
     </ion-item>
-    <ion-button (click)="loadMore()" fill="outline" style="margin-top: 15px;" *ngIf="data.data.lenght<data.per_page*data.last_page">
+    <ion-button (click)="loadMore()" fill="outline" style="margin-top: 15px;" *ngIf="data.data.length<data.total">
       {{loadingMore?'Cargando...':'Cargar más'}}
     </ion-button>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="adminPermission">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="adminPermission && query=='ranking'">
     <ion-fab-button (click)="csvExport()">
       <ion-icon name="save-outline"></ion-icon>
     </ion-fab-button>
