feat(app): Added darkmode toggle button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,13 @@
           </ion-menu-toggle>
         </ion-list>
 
+        <ion-list style="padding-top: 0;">
+          <ion-item lines="full">
+            <ion-label>Dark mode</ion-label>
+            <ion-toggle #darkModeToggle (ionChange)="toggleDark($event)"></ion-toggle>
+          </ion-item>
+        </ion-list>
+
         <ion-list id="labels-list">
           <ion-list-header>Enlaces de interés</ion-list-header>
 
