feat(recover): Added recover password page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 
         <ion-list style="padding-top: 0;">
           <ion-item lines="full">
-            <ion-label>Dark mode</ion-label>
+            <ion-label>Modo oscuro</ion-label>
             <ion-toggle #darkModeToggle (ionChange)="toggleDark($event)"></ion-toggle>
           </ion-item>
         </ion-list>
