--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -23,7 +23,8 @@
     </ion-item>
 
     <div class="ion-padding">
-      <ion-text>Si has olvidado tu contraseña, ponte en contacto mediante telegram con @arsa_dev</ion-text><br>
+      <ion-text>Si has olvidado tu contraseña, haz <a routerLink="/recover">click aquí</a> para restablecerla.</ion-text>
+      <br><br><br>
       <ion-button expand="block" type="submit" class="ion-no-margin">Iniciar sesión</ion-button>
     </div>
   </form>
