--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -83,6 +83,11 @@
             <ion-input [(ngModel)]="data.cp" placeholder="Código Postal" name="cp"></ion-input>
           </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-textarea [(ngModel)]="data.address_description" placeholder="Comentario adicional" name="address_description"></ion-textarea>
+          </ion-col>
+        </ion-row>
       </ion-grid>
     </ion-item>
 
