--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -10,9 +10,17 @@
 <ion-content>
 
   <ion-list *ngIf="data">
-    <ion-item *ngFor="let community of data.data" [routerLink]="'/community/'+community.alias+'/detail/pieces'">
-      <ion-label>{{community.name}}</ion-label>
-    </ion-item>
+    <ng-container *ngFor="let community of data.data">
+      <ion-list-header>
+        <ion-label>{{community.name}}</ion-label>
+      </ion-list-header>
+      <ion-item [routerLink]="'/community/'+community.alias+'/detail/pieces'">
+        <ion-label>Ir a la comunidad</ion-label>
+      </ion-item>
+      <ion-item *ngIf="community.collect">
+        <ion-label>Tienes una recogida pendiente</ion-label>
+      </ion-item>
+    </ng-container>
   </ion-list>
 
 </ion-content>
