--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -12,13 +12,13 @@
   <ion-list *ngIf="data">
     <ng-container *ngFor="let community of data.data">
       <ion-list-header>
-        <ion-label>{{community.name}}</ion-label>
+        <ion-label><b>{{community.name}}</b></ion-label>
       </ion-list-header>
       <ion-item [routerLink]="'/community/'+community.alias+'/detail/pieces'">
         <ion-label>Ir a la comunidad</ion-label>
       </ion-item>
-      <ion-item *ngIf="community.collect">
-        <ion-label>Tienes una recogida pendiente</ion-label>
+      <ion-item *ngIf="community.collect" [style.cursor]="community.collect?'pointer':''" (click)="editCollect(community)">
+        <ion-label>Tienes una recogida pendiente. Haga click aquí para marcar como entregada</ion-label>
       </ion-item>
     </ng-container>
   </ion-list>
