--- a/src/app/pages/community-module/components/editcollect/editcollect.html
+++ b/src/app/pages/community-module/components/editcollect/editcollect.html
@@ -69,7 +69,7 @@
             </ion-card-title>
             <ion-card-subtitle>
               <ng-container>
-                Solicitadas: {{material.units_request||0}} | Recibidas: {{material.units_collected||0}} | Pendientes: {{material.units_pending||0}}
+                Solicitadas: {{material.units_request||0}} | Recibidas: {{material.units_delivered||0}} | Pendientes: {{material.units_pending||0}}
               </ng-container>
               <ion-item *ngIf="data.admin">
                 <ion-label>Cantidad a entregar</ion-label>
@@ -89,7 +89,7 @@
         </ion-list-header>
         <ng-container *ngIf="showAvailableMaterials">
           <ng-container *ngFor="let material of data.materials">
-            <ion-item *ngIf="material.units==0 && material.stock!=0" [style.cursor]="'pointer'" (click)="material.units = material.units_pending">
+            <ion-item *ngIf="material.units==0 && material.units_pending!=0" [style.cursor]="'pointer'" (click)="material.units = material.units_pending">
               <ion-thumbnail><img [src]="material.picture||'/assets/img/placeholder.jpg'" style="max-width: 100px; max-height: 100px; padding: 10px;"></ion-thumbnail>
               <ion-label>{{material.name}}</ion-label>
             </ion-item>
