--- a/src/app/pages/community-module/pages/detail/tabs/collect/collect.html
+++ b/src/app/pages/community-module/pages/detail/tabs/collect/collect.html
@@ -37,7 +37,7 @@
         <ion-label>
           <h2>{{collect.user_name}}   <small>{{collect.user_alias}}</small> - MK#{{collect.mak3r_num}}</h2>
           <p>
-            Total piezas: {{collect.units_collected}} | Total materiales: {{collect.units_delivered}}<br>
+            Total piezas: {{collect.pieces|totalunits}} | Total materiales: {{collect.materials|totalunits}}<br>
             Fecha: {{collect.created_at|datetime}}
           </p>
         </ion-label>
