fix(editcollect): Removed bad ngIf from template

--- a/src/app/pages/community-module/components/editcollect/editcollect.html
+++ b/src/app/pages/community-module/components/editcollect/editcollect.html
@@ -6,7 +6,7 @@
       <ion-button (click)="dismiss()">
         CANCELAR
       </ion-button>
-      <ion-button (click)="save()" *ngIf="getDiff!=0">
+      <ion-button (click)="save()">
         GUARDAR
       </ion-button>
     </ion-buttons>
